--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tanstack/react-query": "5.90.12",
     "eslint-plugin-react-refresh": "0.4.24",
     "expo": "54.0.27",
+    "expo-blur": "^15.0.8",
     "expo-image": "3.0.11",
     "expo-secure-store": "15.0.8",
     "expo-status-bar": "3.0.9",
